--- a/test.html
+++ b/test.html
@@ -4,9 +4,19 @@
 	<head>
 		<title>Test display of HTML elements</title>
 		
+		<!-- 
+		
+		This document is copied from http://www.cs.tut.fi/~jkorpela/www/testel.html 
+		and modified to be an XHTML 1.0 Strict document.
+		
+		I have dropped a few things that didn't make sense for my purposes and added 
+		a couple new things.
+		
+		 -->
+		
 		<!-- stylesheets -->
-		<link rel="stylesheet" type="text/css" href="stylesheets/layout.css" media="all" />
-		<link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
+		<link rel="stylesheet" type="text/css" media="screen" href="stylesheets/layout.css" />
+		<link rel="stylesheet" type="text/css" media="print" href="stylesheets/print.css" />
 		
 		<!--[if lte IE 7]>
 			<style type="text/css" media="screen">
