updated links in test.html to display variations matching the print stylesheet, updated css files to use Panic Coda style bookmarks

--- a/test.html
+++ b/test.html
@@ -127,8 +127,9 @@
 		
 		<h2>Links</h2>
 		<ul>
-			<li><a href="#">main page</a></li>
-			<li><a href="http://www.unicode.org/versions/Unicode4.0.0/ch06.pdf" title="Writing Systems and Punctuation" type="application/pdf">Unicode Standard, chapter&nbsp;6</a></li>
+			<li><a href="#">anchor link</a></li>
+			<li><a href="/">internal link</a></li>
+			<li><a href="http://www.unicode.org/versions/Unicode4.0.0/ch06.pdf" title="Writing Systems and Punctuation" type="application/pdf">external link</a></li>
 		</ul>
 		<p>This is a text paragraph that contains some inline links. Generally, inline links (as opposite to e.g. links lists) are problematic from the <a href="http://www.useit.com">usability</a> perspective, but they may have use as, incidental, less relevant links. See the document <cite><a href="links.html">Links Want To Be Links</a></cite>.</p>
 		
